--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "^14.2.35",
+    "pixi.js": "^8.14.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
